{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Pathfinding",
            "id": "affdd737-ae04-4825-97bd-194162c2eb61",
            "actions": [
                {
                    "name": "PlaceDestination",
                    "type": "Button",
                    "id": "b988c877-5e8f-48c8-aa3e-819fa67ad0d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "31f17d67-cc5f-49f9-9e6b-fb9806413af6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InitializeMap",
                    "type": "Button",
                    "id": "73198c15-0fbe-4f07-892c-465d15facfed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "30fb2a72-9e56-4616-87fd-7aae6c05836b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceDestination",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50030078-406d-4ca7-9e5d-448932c0013f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a144c134-7788-4f9a-a780-1d9dafa92146",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InitializeMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}